--- a/staticfiles/ckeditor/editor.html
+++ b/staticfiles/ckeditor/editor.html
@@ -29,18 +29,19 @@
 <div id="selected-id" style="border: #a3bde3 solid 2px; font-size: 1.2em;"></div>
 <div id="editor">
   <p>
-    This is the combination of CKEditor and LITE plugin
-    <pd sid='0'>.</pd>
-    And we would like to modify it
-    <pd sid='1'>.</pd>
-    Right now I am testing its functionality and APIs
-    <pd sid='2'>.</pd>
-    I think it is ok for our purposes
-    <pd sid='3'>.</pd>
-    Although it has some bugs but it doesn't matter
-    <pd sid='4'>.</pd>
-    We can use some tricks to cover it
-    <pd sid='5'>.</pd>
+    Sentence 1
+    <pd sid="1">.</pd>
+    Sentence 2
+    <pd sid="2">.</pd>
+    Sentence 3
+    <pd sid="3">.</pd>
+    Sentence 4
+    <pd sid="4">.</pd>
+    Sentence 5
+    <pd sid="5">.</pd>
+    Sentence 6
+    <pd sid="6">.</pd>
+
   </p>
 </div>
 <div id="selected-sentence" style="border: #18C0DF solid 2px; font-size: 1.2em;"></div>
